[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/fonts/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/images/logos/callbreak_logo.webp" type="Texture" id=2]
[ext_resource path="res://assets/images/callbreak-lite_image.png" type="Texture" id=3]
[ext_resource path="res://src/scripts/components/minicomponents/game_descriptions.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/images/logos/platforms/appstore_logo.png" type="Texture" id=6]
[ext_resource path="res://assets/images/logos/platforms/playstore_logo.png" type="Texture" id=7]
[ext_resource path="res://assets/images/logos/platforms/web_logo.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=7]
size = 28
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 13
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=11]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="CanvasItemMaterial" id=9]
blend_mode = 4

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

void fragment(){
//	vec4 pixel_color = texture(TEXTURE, UV);
//	if (length(pixel_color) >= 1.0){
//		COLOR.r = 0.7;
//	}
}"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 4 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )

[node name="HBoxContainer" type="HBoxContainer"]
anchor_right = 0.8
anchor_bottom = 0.309
rect_min_size = Vector2( 0, 334 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12
alignment = 1
script = ExtResource( 4 )

[node name="DetailsContainer" type="PanelContainer" parent="."]
margin_right = 506.0
margin_bottom = 334.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="DetailsContainer"]
margin_right = 506.0
margin_bottom = 334.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="DetailsContainer/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 476.0
margin_bottom = 304.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="DetailsContainer/MarginContainer/VBoxContainer"]
margin_right = 446.0
margin_bottom = 80.0

[node name="GameLogo" type="TextureRect" parent="DetailsContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 70.0
margin_bottom = 80.0
rect_min_size = Vector2( 70, 80 )
texture = ExtResource( 2 )
expand = true

[node name="GameTitle" type="Label" parent="DetailsContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 74.0
margin_top = 23.0
margin_right = 416.0
margin_bottom = 56.0
rect_min_size = Vector2( 342, 0 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Callbreak.com - Card game"

[node name="GameDescription" type="Label" parent="DetailsContainer/MarginContainer/VBoxContainer"]
margin_top = 100.0
margin_right = 446.0
margin_bottom = 177.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Who doesn’t love a fun and exciting card game that’s easy to learn and can also be enjoyed with a group of family and friends? Look no further than Callbreak: Game of Cards – the mega-hit card game that has taken the Play Store by storm!"
autowrap = true

[node name="HBoxContainer2" type="HBoxContainer" parent="DetailsContainer/MarginContainer/VBoxContainer"]
margin_top = 197.0
margin_right = 446.0
margin_bottom = 247.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="DetailsContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 15.0
margin_right = 86.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "Get it from: "

[node name="HBoxContainer" type="HBoxContainer" parent="DetailsContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 106.0
margin_right = 264.0
margin_bottom = 50.0

[node name="PlayStoreButton" type="TextureButton" parent="DetailsContainer/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )
expand = true

[node name="AppStoreButton" type="TextureButton" parent="DetailsContainer/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
material = SubResource( 9 )
margin_left = 54.0
margin_right = 104.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 6 )
expand = true

[node name="WebButton" type="TextureButton" parent="DetailsContainer/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
material = SubResource( 10 )
margin_left = 108.0
margin_right = 158.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 8 )
expand = true

[node name="PictureContainer" type="PanelContainer" parent="."]
margin_left = 518.0
margin_right = 1024.0
margin_bottom = 334.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 5 )

[node name="GamePicture" type="TextureRect" parent="PictureContainer"]
margin_left = 53.0
margin_top = 67.0
margin_right = 453.0
margin_bottom = 267.0
rect_min_size = Vector2( 400, 200 )
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
